# AGL

./: .gitignore  .gitmodules  LICENSE  README.md  comparison_map.data  comparison_map.pgm  comparison_map.yaml  installer.sh
src/agl/: CMakeLists.txt  package.xml
src/agl_bringup/: CMakeLists.txt  LICENSE  README.md  package.xml
src/agl_bringup/config/: params.yaml  start.sample.yaml  start.yaml  start_simulation.sample.yaml
src/agl_bringup/launch/: gazebo_launch.py  lidar_launch.py  rviz_launch.py  simulation_launch.py  start_launch copy.py  start_launch.py
src/agl_control/: CMakeLists.txt  README.md  package.xml
src/agl_control/config/: params.yaml
src/agl_control/include/agl_control/: control_manager.hpp  errors.hpp
src/agl_control/include/me00_control/: control_manager.hpp
src/agl_control/launch/: start_launch.py
src/agl_control/src/: control_manager.cpp  main.cpp
src/agl_description/: CMakeLists.txt  LICENSE  README.md  package.xml
src/agl_description/launch/: display.launch.py  launch.py  launch_no_publisher.py  start_launch.py
src/agl_description/mesh/: base.stl  caster_base_back.stl  caster_base_test.stl  caster_sphere_scaled.stl  caster_wheel.stl  laser.stl  new_base.stl  wheel.stl
src/agl_description/model/Jayan_almacen1/: model.config  model.sdf
src/agl_description/model/ageve/: model.config  model.sdf
src/agl_description/model/ageve_floor/: model.config  model.sdf
src/agl_description/model/andresito/: model.sdf
src/agl_description/model/me00_description/: model.config  model.sdf
src/agl_description/rviz/: agl.rviz  onlyrobot.rviz  simulation_basic.rviz
src/agl_description/urdf/: andresito.urdf  andresito.xacro  me00.urdf  me00.xacro  properties.xacro  regenerate_models.sh  wheel.xacro
src/agl_description/urdf/include/: caster_wheel.xacro  gazebo.xacro  kinematics.xacro  links.xacro
src/agl_description/world/: agl_world  agl_world.sdf
src/agl_description/world/ageve_empty/: ageve_empty  model.config
src/agl_description/world/ageve_me00/: ageve_me00  model.config
src/agl_description/world/jayan_nave1/: jayan_nave1
src/agl_diagnostics/: CMakeLists.txt  README.md  package.xml
src/agl_diagnostics/config/: params.yaml
src/agl_diagnostics/include/me00_diagnostics/: diagnostics_manager.hpp
src/agl_diagnostics/launch/: start_launch.py
src/agl_diagnostics/src/: diagnostics_manager.cpp
src/agl_imu/: CMakeLists.txt  package.xml
src/agl_imu/config/: ekf_global_params.yaml  ekf_local_params.yaml
src/agl_imu/include/agl_imu/: imu_interface.hpp
src/agl_imu/include/atlas_imu/: imu.hpp  imu_factory.hpp
src/agl_imu/launch/: launch.py
src/agl_imu/src/: imu.cpp  main.cpp
src/agl_imu/src/can_utils/: CANdb.cpp
src/agl_imu/src/imu_drivers/: aceinna_imu.cpp  wit_imu.cpp
src/agl_imu/test/include/: test_imu.hpp
src/agl_interfaces/: CMakeLists.txt  LICENSE  package.xml
src/agl_interfaces/msg/: OdometryMsg.msg  TwoAngularSpeeds.msg  twoAngularSpeeds.msg
src/agl_interfaces/srv/: GenerateDifferentialSpeeds.srv  generateDifferentialSpeeds.srv
src/agl_joystick/: CMakeLists.txt  Dockerfile  README.md  build_docker.sh  package.xml
src/agl_joystick/config/: joy_params.yaml  joystick_params.sample.yaml  params.yaml
src/agl_joystick/docker/: dev_docker.sh  run_docker.sh
src/agl_joystick/include/agl_joystick/: joystick.hpp
src/agl_joystick/include/me00_joystick/: joystick.hpp
src/agl_joystick/launch/: launch.py  start_launch.py
src/agl_joystick/src/: joystick.cpp  main.cpp
src/agl_joystick/test/include/: test_joystick.hpp
src/agl_joystick/test/src/: test_joystick.cpp
src/agl_lidar/: CMakeLists.txt  package.xml
src/agl_lidar/config/: params.sample.yaml
src/agl_lidar/launch/: launch.py
src/agl_odometry/: LICENSE  package.xml  setup.cfg  setup.py
src/agl_odometry/agl_odometry/: odometry.py
src/agl_odometry/launch/: launch.py
src/agl_serial_interface/: CMakeLists.txt  LICENSE  package.xml  serial_server.py  setup.cfg  setup.py
src/agl_serial_interface/agl_serial_interface/: serial_client.py  serial_server.py
src/agl_serial_interface/config/: params.sample copy.yaml
src/agl_serial_interface/launch/: launch.py
src/agl_wheelmotor/: CMakeLists.txt  README.md  package.xml
src/agl_wheelmotor/config/: params.yaml
src/agl_wheelmotor/include/agl_wheelmotor/: diff_odom.hpp  (+2 more)
src/agl_wheelmotor/launch/: start_launch.py
src/agl_wheelmotor/src/: command_client.cpp  config_client.cpp  controller.cpp  controller_eip.cpp  diff_odom.cpp  main.cpp  maintenance_client.cpp  roboteq_motor_controller_driver_node.cpp  wheelmotor.cpp
src/ast_imu_filter_madgwick/: CMakeLists.txt  README.md  package.xml
src/ast_imu_filter_madgwick/config/: params.sample.yaml
src/ast_imu_filter_madgwick/launch/: launch.py
src/atlas_filters/: CMakeLists.txt  package.xml
src/atlas_filters/config/: ekf_local_params.yaml  params.sample.yaml
src/atlas_filters/launch/: start_launch.py
src/atlas_filters/src/: filter_node.cpp  main.cpp
src/atlas_interfaces/: CMakeLists.txt  README.md  package.xml
src/atlas_interfaces/action/: ActionManager.action  Backward.action  Docking.action  Sound.action  Undocking.action
src/atlas_interfaces/msg/: Action.msg  CanMsg.msg  CanMsgs.msg  ChannelValues.msg  Control.msg  Diagnostics.msg  DigitalInputs.msg  DigitalOutputs.msg  Error.msg  ErrorsLog.msg  Heartbeat.msg  LaserDriverHeader.msg  LogMsg.msg  Map.msg  Mission.msg  MissionId.msg  NavigationStatus.msg  RobotInfo.msg  TaskManagerStatus.msg  Waypoint.msg  WaypointActions.msg
src/atlas_interfaces/srv/: AssignAction.srv  CreateMission.srv  DeleteWaypoint.srv  FollowPath.srv  GetActions.srv  GetDiagnostics.srv  GetMapImage.srv  GetMaps.srv  GetMissions.srv  GetNavigationMode.srv  GetPose.srv  GetWaypoints.srv  Heartbeat.srv  LinkAction.srv  LoadMap.srv  Navigate.srv  ProcessCompleted.srv  Rosbag.srv  RunMission.srv  SaveWaypoint.srv  StartMapping.srv  StartProcess.srv  StatusEmergency.srv  StatusMission.srv  SwitchNavigationMode.srv  ToggleState.srv  YamlTransfer.srv
src/atlas_utils/: CMakeLists.txt  README.md  package.xml
(+73 files in other folders)
