<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agl_description</name>
  <version>0.0.0</version>
  <description>AGL robot model description for transforms and simulation</description>
  <maintainer email="davidvalenciac01@gmail.com">
        DavidValencia
  </maintainer> 

  <license>See LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>realsense2_description</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
