<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agl_joystick</name>
  <version>1.1.2</version>
  <description>AGL Joystick Driver</description>
  <maintainer email="albert.arla@movvo.eu">Albert Arlà</maintainer>
  <maintainer email="marti.bolet@movvo.eu">Martí Bolet</maintainer>
  <maintainer email="bernat.gaston@movvo.eu">Bernat Gaston</maintainer>
  <maintainer email="maria.mercade@movvo.eu">María Mercadé</maintainer>
  <maintainer email="david.valencia@movvo.eu">David Valencia</maintainer>

  <license>Movvo Robotics 2023. All rights reserved</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
 
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <test_depend>ament_cmake_gtest</test_depend>
</package>
