<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agl_lidar</name>
  <version>0.0.0</version>
  <description>Package capable of calling back rplidar_ros package in order to launch a specific launch file for our lidar</description>
  <maintainer email="davidvalenciac01@gmail.com">DavValCal</maintainer>
  <license>License of RPLidar's package rplidar_ros</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
