<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agl_odometry</name>
  <version>0.0.0</version>
  <description>AGL Odometry Package for encoder only localization</description>
  <maintainer email="davidvalenciac01@gmail.com">DavValCal</maintainer>
  <license>See LICENSE</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
