<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agl_serial_interface</name>
  <version>0.0.0</version>
  <description>AGL Serial Interface which will let us communicate via serial port with our Arduino controlling the robot's HW</description>
  <maintainer email="davidvalenciac01@gmail.com">David</maintainer>
  <license>See LICENSE</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
