<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agl_wheelmotor</name>
  <version>0.0.0</version>
  <description>This packages includes the drivers of roboteq motorwheel</description>
  <maintainer email="support.idi@ageve.net">
        iggyrrieta, 
        albertarla, 
        MartiBolet
  </maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ageve_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>ageve_utils</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
