<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ast_imu_filter_madgwick</name>
  <version>0.0.0</version>
  <description>Package to launch Intel D4X5 camera</description>
  <maintainer email="support.idi@movvo.eu">
        AlbertArla, 
        MartiBolet,
        BernatGaston,
        MariaMercade,
        DavValCal
  </maintainer> 

  <license>Movvo Robotics 2023. All rights reserved</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
