<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atlas_filters</name>
  <version>0.0.0</version>
  <description>Node to filter sensors data</description>
  <maintainer email="support.idi@ageve.net">
        iggyrrieta, 
        albertarla, 
        MartiBolet
  </maintainer>
  <license>TODO</license> 
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>atlas_interfaces</depend>
  <depend>atlas_utils</depend>
  <depend>message_filters</depend>
  <depend>laser_geometry</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>PCL</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
