<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atlas_utils</name>
  <version>1.1.2</version>
  <description>Atlas utils</description>
  <maintainer email="albert.arla@movvo.eu">Albert Arlà</maintainer>
  <maintainer email="marti.bolet@movvo.eu">Martí Bolet</maintainer>
  <maintainer email="bernat.gaston@movvo.eu">Bernat Gaston</maintainer>
  <maintainer email="maria.mercade@movvo.eu">María Mercadé</maintainer>
  <license>MOVVO ROBOTICS. All rights reserved.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
 
  <depend>rclcpp</depend>
  <depend>ageve_interfaces</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <test_depend>ament_cmake_gtest</test_depend>
</package>